test/Error/useruncaught.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

var arrObj0 = {};
function func12() {
  'use strict';
  arrObj0(arrObj0(typeof this.prop5));
}
func12();
